2006-05-23 Benoit Grégoire  <bock@step.polymtl.ca>
	* config.php:  Disable USE_CACHE_LITE, it's definitely not stable, and causes very hard to track down problems with Internet Explorer.
	
2006-05-22 François Proulx <francois.proulx@gmail.com>
	* Fixed isValidUsername() Js function to allow caret and dot characters

2006-05-22 François Proulx <francois.proulx@gmail.com>
	* Use Pgsql persistent connections

2006-05-22 François Proulx <francois.proulx@gmail.com>
	* Removed unnecessary debug message
	* Fixed getNumOnlineUsers to count users by MAC on splash only nodes

2006-05-22 François Proulx <francois.proulx@gmail.com>
	* Added generateFromArray parameter (max_length)
	* Restricts select content ui combo box to 40 chars
	* Added Smarty plugin modifier.fsize_format.php

2006-05-21 François Proulx <francois.proulx@gmail.com>
	* Stupid IE CSS bug fixed

2006-05-21 François Proulx <francois.proulx@gmail.com>
	* Fixed various bugs in content system
	* stylesheet work

2006-05-21 François Proulx <francois.proulx@gmail.com>
	* Think I've fixed Google Maps on IE.
		* need to test on another system..

2006-05-20 François Proulx <francois.proulx@gmail.com>
	* Completed french translations
	* Fixed Flickr javascript
	* Various stylesheet improvements to tighten up the portal and admin

2006-05-20 François Proulx <francois.proulx@gmail.com>
	* Various stylesheet improvements, started working on Île Sans Fil network specific theme pack
	* Fixed a few layout bugs

2006-05-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* USE_BASE_NON_SSL_PATH for hotspot map, else internet explorer whines endlessly

2006-05-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* index.tpl:  Fix link to the map not being displayed at a hotspot, even when you are logged in.  There needs to be much better logick before we export such things to smarty templates.

2006-05-20 François Proulx <francois.proulx@gmail.com>
	* Added /wifidog/contrib and /wifidog/contrib/xslt directories